# mate-user-guide-mallard

./: AUTHORS  COPYING  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac
mate-help/: Makefile.am  index.page  legal.xml
mate-user-guide/: Makefile.am
mate-user-guide/C/: a11y-bouncekeys.page  a11y-braille.page  a11y-contrast.page  a11y-icon.page  a11y-slowkeys.page  about-this-guide-history-authors.page  about-this-guide-history.page  about-this-guide.page  app-pitivi.page.stub  app-rhythmbox.page.stub  app-shotwell.page.stub  backup-check.page  backup-frequency.page  backup-how.page  backup-restore.page  backup-thinkabout.page  backup-what.page  backup-where.page  backup-why.page  bluetooth-problem-connecting.page  bluetooth-turn-on-off.page  caja-behavior.page  caja-connect.page  caja-display.page  caja-file-properties-permissions.page  caja-list.page  caja-preview.page  caja-views.page  clock-set.page  clock.page  disk-capacity.page  disk-check.page  disk-partitions.page  display-dimscreen.page  files-autorun.page  files-browse.page  files-copy.page  files-delete.page  files-disc-write.page  files-hidden.page  (+142 more)
mate-user-guide/C/figures/templates/games/: controls-changing.page.stub  controls.page.stub  gameplay.page.stub  multiplayer.page.stub
mate-user-guide/C/templates/: a11y-feature.page.tmpl
mate-user-guide/C/templates/games/: GENERIC.page.stub  index.page  strategy.page.stub  tips.page.stub
mate-user-guide/C/templates/inc/: a11y-dwellclick.page  a11y-font-size.page  a11y-locate-pointer.page  a11y-mag.page  a11y-right-click.page  a11y-screen-reader.page  a11y-stickykeys.page  a11y-visualalert.page  a11y.page  backup-check.page  backup-how.page  backup-restore.page  backup-where.page  bluetooth-connect-device.page  bluetooth-remove-connection.page  bluetooth-send-file.page  clock-calendar.page  clock-timezone.page  disk-benchmark.page  disk-format.page  display-lock.page  files-autorun.page  files-browse.page  files-hidden.page  files-lost.page  files-open.page  files-preview-music.page  files-search.page  files-select.page  files-share.page  hardware-problems-bluetooth.page  keyboard-layouts.page  keyboard.page  look-display-fuzzy.page  look-resolution.page  media.page  mouse-disabletouchpad.page  mouse-lefthanded.page  mouse-middleclick.page  mouse-problem-notmoving.page  (+55 more)
mate-user-guide/C/templates/old/: index.page.old  session-loginsound.page.old  shell-apps-favorites.page.old  shell-apps-open.page.old  shell-apps-search.page.old  shell-exit.page.old  shell-introduction.page.old  shell-keyboard-shortcuts.page.old  shell-windows.page.old
mate-user-guide/C/templates/stub/: app-banshee.page.stub  app-cheese.page.stub  app-fspot.page.stub  app-totem.page.stub  display-2monitors.page.stub  files-templates.page.stub  hardware-phone-connecting.page.stub  hardware-problems-crashes.page.stub  hardware-problems-scanning.page.stub  net-mobile.page.stub  printing-setup-networked.page.stub  session-netlogin.page.stub  shell-apps-forcequit.page.stub  shell-apps-install.page.stub
