@YELP_HELP_RULES@

HELP_ID = mate-user-guide

HELP_MEDIA =                                     \
	figures/mate-yelp-icon-big.png               \
    figures\mate-caja-default-computer-view.png  \
    figures\mate-default-top-panel.png           \
    figures\mate-panel-applications.png          \
    figures\mate-default-desktop-home.png        \
    figures\mate-exit.png                        \
    figures\mate-panel-places.png                \
    figures\mate-default-desktop.png             \
    figures\mate-logo.png                        \
    figures\mate-yelp-icon-big.png

HELP_FILES =                \
	legal.xml               \
	index.page              \
    mate-apps-open.page     \
    mate-exit.page          \
    mate-introduction.page  \
    mate-overview.page      \
    mate-windows.page

HELP_LINGUAS = 
