@YELP_HELP_RULES@

HELP_ID = mate-user-guide

HELP_MEDIA =                                     \
    figures/mate-yelp-icon-big.png               \
    figures/mate-caja-default-computer-view.png  \
    figures/mate-default-top-panel.png           \
    figures/mate-panel-applications.png          \
    figures/mate-default-desktop-home.png        \
    figures/mate-exit.png                        \
    figures/mate-panel-places.png                \
    figures/mate-default-desktop.png             \
    figures/mate-logo.png                        \
    figures/mate-panel-workspaceswitcher.png     \
    figures/mate-panel-windowlist.png            \
    figures/mate-default-lower-panel.png         \
    figures/mate-control-center.png              \
    figures/mate-clock-prefs-general.png         \
    figures/mate-add-to-panel-rtclick.png


HELP_FILES =                      \
    legal.xml                     \
    index.page                    \
    mate-apps-favorites           \
    mate-apps-open.page           \
    mate-exit.page                \
    mate-introduction.page        \
    mate-keyboard-shortcuts.page  \
    mate-notifications.page       \
    mate-overview.page            \
    mate-windows.page             \
    tips.page

HELP_LINGUAS =
