@YELP_HELP_RULES@

HELP_ID = mate-user-guide

HELP_MEDIA =                                     \
    figures/caja.png                             \
    figures/mate-add-to-panel-rtclick.png        \
    figures/mate-caja-default-computer-view.png  \
    figures/mate-clock-prefs-general.png         \
    figures/mate-control-center.png              \
    figures/mate-default-desktop-home.png        \
    figures/mate-default-desktop.png             \
    figures/mate-default-lower-panel.png         \
    figures/mate-default-top-panel.png           \
    figures/mate-exit.png                        \
    figures/mate-logo.png                        \
    figures/mate-panel-applications.png          \
    figures/mate-panel-places.png                \
    figures/mate-panel-windowlist.png            \
    figures/mate-panel-workspaceswitcher.png     \
    figures/mate-yelp-icon-big.png


HELP_FILES =                               \
    about-this-guide-history-authors.page  \
    about-this-guide-history.page          \
    about-this-guide.page                  \
    backup-check.page                      \
    backup-frequency.page                  \
    backup-how.page                        \
    backup-restore.page                    \
    backup-thinkabout.page                 \
    backup-what.page                       \
    backup-where.page                      \
    backup-why.page                        \
    caja-behavior.page                     \
    caja-connect.page                      \
    caja-display.page                      \
    caja-file-properties-permissions.page  \
    caja-views.page                        \
    files-autorun.page                     \
    files-browse.page                      \
    files-copy.page                        \
    files-delete.page                      \
    files-disc-write.page                  \
    files-hidden.page                      \
    files-lost.page                        \
    files-open.page                        \
    files.page                             \
    files-preview-music.page               \
    files-recover.page                     \
    files-removedrive.page                 \
    files-rename.page                      \
    files-search.page                      \
    files-select.page                      \
    files-share.page                       \
    files-sort.page                        \
    files-tilde.page                       \
    get-involved.page                      \
    index.page                             \
    legal.xml                              \
    mate-apps-favorites.page               \
    mate-apps-open.page                    \
    mate-exit.page                         \
    mate-introduction.page                 \
    mate-keyboard-shortcuts.page           \
    mate-notifications.page                \
    mate-overview.page                     \
    mate-template-untitled.page            \
    mate-terminal.page                     \
    mate-terminology.page                  \
    mate-windows-lost.page                 \
    mate-windows-maximize.page             \
    mate-windows.page                      \
    mate-windows-states.page               \
    mate-windows-switching.page            \
    mate-workspaces-movewindow.page        \
    mate-workspaces.page                   \
    more-help.page                         \
    tips.page

HELP_LINGUAS =
